[package]
name = "conetty"
version = "0.2.1"
edition = "2021"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT"
documentation = "https://docs.rs/conetty"
homepage = "https://github.com/Xudong-Huang/conetty"
repository = "https://github.com/Xudong-Huang/conetty"
keywords = ["protocol", "server", "client"]
readme = "README.md"
description = "General client server framework for Rust based on coroutine."

[lib]
# crate-type = ["dylib"]

[dependencies]
log = "0.4"
may = "0.3"
thiserror = "1"
arrayvec = "0.7"
byteorder = "1"
crossbeam = "0.8"
may_waiter = "0.1"
co_managed = { git = "https://github.com/Xudong-Huang/co_managed.git" }

[dev-dependencies]
bincode = "1"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
token_id = { git = "https://github.com/Xudong-Huang/token_id.git" }

[profile.release]
opt-level = 3
